# DesignPattern-In-Rust

./: Cargo.toml  README.md
behavioral_patterns/Iterator/src/: lib.rs
behavioral_patterns/Observer/: Cargo.toml
behavioral_patterns/Observer/src/: lib.rs
behavioral_patterns/Strategy/: Cargo.toml
behavioral_patterns/Strategy/src/: lib.rs
behavioral_patterns/Template/: Cargo.toml
behavioral_patterns/Template/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
src/: main.rs
src/behavioral_patterns/: iterator.rs  mod.rs
structural-patterns/Adapter/: Cargo.toml
structural-patterns/Adapter/src/: desc.md  lib.rs  my_mod.rs
structural-patterns/Proxy/remote_proxy/: Cargo.toml
structural-patterns/Proxy/remote_proxy/src/: lib.rs
structural-patterns/Proxy/virtual_proxy/: Cargo.toml
structural-patterns/Proxy/virtual_proxy/src/: lib.rs
