[workspace]
resolver = "2"
members = [
    "behavioral_patterns/Observer",
    "behavioral_patterns/Strategy",
    "main",
    "behavioral_patterns/Iterator",
    "structural-patterns/Adapter"
, "behavioral_patterns/Template","structural-patterns/Proxy/remote_proxy", "structural-patterns/Proxy/virtual_proxy"]
