[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
#Observer = {path = "../behavioral_patterns/Observer"}
#Adapter = {path = "../structural-patterns/Adapter"}
#Template = {path = "../behavioral_patterns/Template"}
virtual_proxy = {path = "../structural-patterns/Proxy/virtual_proxy"}
